add: std_io and std_number

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,3 +15,5 @@ add_subdirectory(${SOURCE_DIR}/container)
 add_subdirectory(${SOURCE_DIR}/std_algorithm)
 add_subdirectory(${SOURCE_DIR}/std_iterator)
 add_subdirectory(${SOURCE_DIR}/function_object)
+add_subdirectory(${SOURCE_DIR}/std_io)
+add_subdirectory(${SOURCE_DIR}/std_number)
