--- a/concurrency_program/thread/CMakeLists.txt
+++ b/concurrency_program/thread/CMakeLists.txt
@@ -2,3 +2,11 @@ add_executable(thread_test thread_test.cc)
 target_link_libraries(thread_test pthread)
 add_executable(future_promise future_promise.cc)
 target_link_libraries(future_promise pthread)
+add_executable(mutex_lock mutex_lock.cc)
+target_link_libraries(mutex_lock pthread)
+add_executable(condition_variable condition_variable.cc)
+target_link_libraries(condition_variable pthread)
+add_executable(condition_variable_queue condition_variable_queue.cc)
+target_link_libraries(condition_variable_queue pthread)
+add_executable(atomic_test atomic_test.cc)
+target_link_libraries(atomic_test pthread)
