add: design pattern 单例模式，观察者模式，工厂模式

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,3 +18,7 @@ add_subdirectory(${SOURCE_DIR}/function_object)
 add_subdirectory(${SOURCE_DIR}/std_io)
 add_subdirectory(${SOURCE_DIR}/std_number)
 add_subdirectory(${SOURCE_DIR}/concurrency_program)
+add_subdirectory(${SOURCE_DIR}/design_pattern)
+add_subdirectory(${SOURCE_DIR}/variadic_templates)
+add_subdirectory(${SOURCE_DIR}/debug)
+add_subdirectory(${SOURCE_DIR}/structure_algorithms)
