--- a/concurrency_program/CMakeLists.txt
+++ b/concurrency_program/CMakeLists.txt
@@ -1,2 +1,3 @@
 add_subdirectory(${SOURCE_DIR}/concurrency_program/async)
 add_subdirectory(${SOURCE_DIR}/concurrency_program/thread)
+add_subdirectory(${SOURCE_DIR}/concurrency_program/logger)
