--- a/structure_algorithms/CMakeLists.txt
+++ b/structure_algorithms/CMakeLists.txt
@@ -2,3 +2,4 @@ add_subdirectory(${SOURCE_DIR}/structure_algorithms/basis)
 add_subdirectory(${SOURCE_DIR}/structure_algorithms/program_performance)
 add_subdirectory(${SOURCE_DIR}/structure_algorithms/linked_list)
 add_subdirectory(${SOURCE_DIR}/structure_algorithms/matrix)
+add_subdirectory(${SOURCE_DIR}/structure_algorithms/stack)
