update: queue and example

--- a/structure_algorithms/queue/CMakeLists.txt
+++ b/structure_algorithms/queue/CMakeLists.txt
@@ -2,3 +2,5 @@ INCLUDE_DIRECTORIES(${SOURCE_DIR})
 add_executable(my_queue_test queue_test.cc queue.h ${SOURCE_DIR}/structure_algorithms/my_exceptions.h)
 add_executable(queue_railroad_sort queue_railroad_sort.cc queue.h ${SOURCE_DIR}/structure_algorithms/my_exceptions.h)
 add_executable(route_test route_test.cc queue.h ${SOURCE_DIR}/structure_algorithms/my_exceptions.h)
+add_executable(graph_element_test graph_element.cc queue.h ${SOURCE_DIR}/structure_algorithms/my_exceptions.h)
+add_subdirectory(${SOURCE_DIR}/structure_algorithms/queue/machine_shop_simulator)
