add: hashtable, binary tree,

--- a/structure_algorithms/CMakeLists.txt
+++ b/structure_algorithms/CMakeLists.txt
@@ -4,3 +4,5 @@ add_subdirectory(${SOURCE_DIR}/structure_algorithms/linked_list)
 add_subdirectory(${SOURCE_DIR}/structure_algorithms/matrix)
 add_subdirectory(${SOURCE_DIR}/structure_algorithms/stack)
 add_subdirectory(${SOURCE_DIR}/structure_algorithms/queue)
+add_subdirectory(${SOURCE_DIR}/structure_algorithms/dictionary)
+add_subdirectory(${SOURCE_DIR}/structure_algorithms/binary_tree)
