add: priority_queue
maxHeap

--- a/structure_algorithms/CMakeLists.txt
+++ b/structure_algorithms/CMakeLists.txt
@@ -6,3 +6,4 @@ add_subdirectory(${SOURCE_DIR}/structure_algorithms/stack)
 add_subdirectory(${SOURCE_DIR}/structure_algorithms/queue)
 add_subdirectory(${SOURCE_DIR}/structure_algorithms/dictionary)
 add_subdirectory(${SOURCE_DIR}/structure_algorithms/binary_tree)
+add_subdirectory(${SOURCE_DIR}/structure_algorithms/priority_queue)
